# vms

./: .gitignore  ai_processor.py  config.py  index.html  main.py  package.json  pyproject.toml  requirements.txt  test_api.py  test_main.py  video_utils.py
src/: App.tsx
src/components/: Dashboard.tsx  ResultsViewer.tsx  StreamManager.tsx
src/services/: api.ts
src/types/: index.ts
